--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,8 @@ overflow-checks = false
 lto = true
 incremental = false
 codegen-units = 1
+
+[patch.crates-io]
+pasta_curves = {git = "ssh://git@github.com/superscalar-io/pasta_curves.git", branch = "0.4.0"}
+ff = {git = "ssh://git@github.com/superscalar-io/ff.git", branch = "0.12.1"}
+
